<resources>
    <string name="app_name">Moob</string>
    <string name="lights">Lights</string>
    <string name="switch_view">Switch View</string>
    <string name="_255">255</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sliderservo">SliderServo</string>
    <string name="shoot">shoot</string>
    <string name="speed">speed</string>
    <string name="light">light</string>
</resources>