<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.slider.Slider
        android:id="@+id/servoSlider"
        android:layout_width="259dp"
        android:layout_height="48dp"
        android:layout_marginStart="65dp"
        android:layout_marginEnd="75dp"
        android:contentDescription="@string/sliderservo"
        android:stepSize="10"
        android:value="0"
        android:valueFrom="0"
        android:valueTo="70"
        app:haloColor="@color/white"
        app:labelBehavior="floating"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.537"
        app:thumbColor="@color/purple_500"
        app:tickColor="@color/white"
        app:trackColor="@color/purple_500" />

    <WebView
        android:id="@+id/camView"
        android:layout_width="match_parent"
        android:layout_height="360dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tempText"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/_255"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/camView" />

    <CheckBox
        android:id="@+id/lightBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:text="@string/light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/camView" />

    <CheckBox
        android:id="@+id/speedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="4dp"
        android:text="@string/speed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/camView" />

    <io.github.controlwear.virtual.joystick.android.JoystickView
        android:id="@+id/joystick"
        android:layout_width="270dp"
        android:layout_height="270dp"
        android:layout_marginStart="110dp"
        app:JV_backgroundColor="#000000"
        app:JV_borderColor="#454545"
        app:JV_borderWidth="4dp"
        app:JV_buttonColor="#FFFFFF"
        app:JV_buttonSizeRatio="15%"
        app:JV_fixedCenter="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/shootButton"
        android:layout_width="84dp"
        android:layout_height="286dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/shoot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>